--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,13 @@
       href="https://fonts.googleapis.com/css2?family=Hahmlet:wght@400;500;600&display=swap"
       rel="stylesheet"
     />
+    <!-- 부트스트랩 -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>React App</title>
