--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,12 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!-- 카카오맵 -->
+    <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=dbc17401b9f808120f3d215222db7117&libraries=services"
+    ></script>
+
     <title>React App</title>
   </head>
   <body>
